18_reverse_str/grade.txt
Grading at Fri Jan 15 21:57:15 UTC 2021
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:6:11: error: comparison between pointer and integer [-Werror]
   if (str != str[0]){
           ^
reverse.c:18:5: error: statement with no effect [-Werror=unused-value]
     str;}
     ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
